--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <div class="container" id="games-list" style="text-align: center;">
     <div class="row">
         <div class="span4">
-          <button onClick="rfsigbundle.reset();" type="button" class="btn btn-danger">Clear Local Storage</button>
-          <button onClick="rfsigbundle.run();" type="button" class="btn btn-primary">Run</button>
-          <button onClick="rfsigbundle.fillGamesList();" type="button" class="btn btn-info">Load from Local Storage</button>
+          <button onClick="RFSGameInfoGathering.reset();" type="button" class="btn btn-danger">Clear Local Storage</button>
+          <button onClick="RFSGameInfoGathering.run();" type="button" class="btn btn-primary">Run</button>
+          <button onClick="RFSGameInfoGathering.fillGamesList();" type="button" class="btn btn-info">Load from Local Storage</button>
         </div>
         <div class="row">
           <div class="span12">
